Fix align error

--- a/src/app/pages/components/article/article.component.css
+++ b/src/app/pages/components/article/article.component.css
@@ -43,8 +43,8 @@ h2 {
 
 .article-information {
     display: flex;
-    justify-content: end;
-    align-content: end;
+    justify-content: flex-end;
+    align-content: flex-end;
     padding-right: 20px;
     padding-bottom: 20px;
     padding-top: 20px;
